VariationHandling/JES_files/2016_preVFP/Histo_1000_TTTo2L2Nu_boostedShiftedSrc15Up.err
[8MB/455.1MB][  1%][>                                                 ][2MB/s]  [16MB/455.1MB][  3%][=>                                                ][3.2MB/s]  [24MB/455.1MB][  5%][==>                                               ][3MB/s]  [32MB/455.1MB][  7%][===>                                              ][2.909MB/s]  [40MB/455.1MB][  8%][====>                                             ][2.857MB/s]  [48MB/455.1MB][ 10%][=====>                                            ][3MB/s]  [56MB/455.1MB][ 12%][======>                                           ][2.8MB/s]  [64MB/455.1MB][ 14%][=======>                                          ][2.667MB/s]  [72MB/455.1MB][ 15%][=======>                                          ][2.483MB/s]  [80MB/455.1MB][ 17%][========>                                         ][2.424MB/s]  [88MB/455.1MB][ 19%][=========>                                        ][2.514MB/s]  [96MB/455.1MB][ 21%][==========>                                       ][2.595MB/s]  [104MB/455.1MB][ 22%][===========>                                      ][2.6MB/s]  [112MB/455.1MB][ 24%][============>                                     ][2.667MB/s]  [120MB/455.1MB][ 26%][=============>                                    ][2.667MB/s]  [128MB/455.1MB][ 28%][==============>                                   ][2.667MB/s]  [136MB/455.1MB][ 29%][==============>                                   ][2.615MB/s]  [144MB/455.1MB][ 31%][===============>                                  ][2.483MB/s]  [152MB/455.1MB][ 33%][================>                                 ][2.413MB/s]  [160MB/455.1MB][ 35%][=================>                                ][2.462MB/s]  [168MB/455.1MB][ 36%][==================>                               ][2.507MB/s]  [176MB/455.1MB][ 38%][===================>                              ][2.588MB/s]  [184MB/455.1MB][ 40%][====================>                             ][2.667MB/s]  [192MB/455.1MB][ 42%][=====================>                            ][2.743MB/s]  [200MB/455.1MB][ 43%][=====================>                            ][2.817MB/s]  [208MB/455.1MB][ 45%][======================>                           ][2.889MB/s]  [216MB/455.1MB][ 47%][=======================>                          ][2.959MB/s]  [224MB/455.1MB][ 49%][========================>                         ][3.027MB/s]  [232MB/455.1MB][ 50%][=========================>                        ][3.093MB/s]  [240MB/455.1MB][ 52%][==========================>                       ][3.158MB/s]  [248MB/455.1MB][ 54%][===========================>                      ][3.221MB/s]  [256MB/455.1MB][ 56%][============================>                     ][3.282MB/s]  [264MB/455.1MB][ 58%][=============================>                    ][3.342MB/s]  [272MB/455.1MB][ 59%][=============================>                    ][3.4MB/s]  [280MB/455.1MB][ 61%][==============================>                   ][3.457MB/s]  [288MB/455.1MB][ 63%][===============================>                  ][3.512MB/s]  [296MB/455.1MB][ 65%][================================>                 ][3.566MB/s]  [304MB/455.1MB][ 66%][=================================>                ][3.619MB/s]  [312MB/455.1MB][ 68%][==================================>               ][3.671MB/s]  [320MB/455.1MB][ 70%][===================================>              ][3.721MB/s]  [328MB/455.1MB][ 72%][====================================>             ][3.77MB/s]  [336MB/455.1MB][ 73%][====================================>             ][3.818MB/s]  [344MB/455.1MB][ 75%][=====================================>            ][3.865MB/s]  [352MB/455.1MB][ 77%][======================================>           ][3.911MB/s]  [360MB/455.1MB][ 79%][=======================================>          ][3.956MB/s]  [368MB/455.1MB][ 80%][========================================>         ][3.957MB/s]  [376MB/455.1MB][ 82%][=========================================>        ][4MB/s]  [384MB/455.1MB][ 84%][==========================================>       ][4MB/s]  [392MB/455.1MB][ 86%][===========================================>      ][4MB/s]  [400MB/455.1MB][ 87%][===========================================>      ][3.96MB/s]  [408MB/455.1MB][ 89%][============================================>     ][3.849MB/s]  [416MB/455.1MB][ 91%][=============================================>    ][3.714MB/s]  [424MB/455.1MB][ 93%][==============================================>   ][3.475MB/s]  [432MB/455.1MB][ 94%][===============================================>  ][3.349MB/s]  [440MB/455.1MB][ 96%][================================================> ][3.188MB/s]  [448MB/455.1MB][ 98%][=================================================>][3.09MB/s]  [455.1MB/455.1MB][100%][==================================================][2.994MB/s]  [455.1MB/455.1MB][100%][==================================================][2.994MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_63740/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_63740/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
